@@ -19,6 +19,7 @@
 10. Double-click queue item to play.
 11. Fix clicking on dynamic playlist item.
 12. Use cometd for status updates, instead of polling server.
+13. Remove drag'n'drop re-ordering of favorites.
 
 0.4.0
 -----
